[tool.poetry]
name = "python-api"
version = "0.1.0"
description = ""
authors = ["wmaucla <zhengweima@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
unicorn = "^2.0.1.post1"
uvicorn = "^0.27.1"
gunicorn = "^21.2.0"
pre-commit = "^3.6.2"
pyjwt = "^2.8.0"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
ruff = "^0.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
