[tool.poetry]
name = "python-api"
version = "0.1.0"
description = ""
authors = ["wmaucla <zhengweima@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
unicorn = "^2.0.1.post1"
uvicorn = "^0.27.1"
gunicorn = "^21.2.0"
pyjwt = "^2.8.0"
pytest-asyncio = "^0.23.5"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.2"
black = "^24.2.0"
ruff = "^0.3.0"
pytest = "^8.0.2"
pytest-cov = "^4.1.0"
fastapi = { version = "^0", extras = ["all"] }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    "ignore:The \\'app\\' shortcut is now deprecated. Use the explicit style \\'transport=WSGITransport\\(app=\\.\\.\\.\\)\\' instead\\.",
]