[tool.poetry]
name = "python-api"
version = "0.1.0"
description = ""
authors = ["wmaucla <zhengweima@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.30.6"
gunicorn = "^21.2.0"
pyjwt = "^2.8.0"
pytest-asyncio = "^0.23.6"
pydantic = "^2.6.4"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.0"
black = "^24.3.0"
ruff = "^0.4.9"
pytest = "^8.1.0"
pytest-cov = "^4.1.0"
fastapi = { version = "^0", extras = ["all"] }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    "ignore:The \\'app\\' shortcut is now deprecated. Use the explicit style \\'transport=WSGITransport\\(app=\\.\\.\\.\\)\\' instead\\.",
]